# rust

rbe/: Cargo.toml
rbe/src/: .primitives.rs.swp  aliasing.rs  arrays_and_slices.rs  associated_functions.rs  casting.rs  closure1.rs  closure2.rs  closure3.rs  closure4.rs  complex_numbers.rs  crate1.rs  crate2.rs  display_list.rs  enums.rs  expressions.rs  forloop.rs  formatted_print.rs  formatting_color.rs  from.rs  higher_order_functions.rs  if_let.rs  linkedlist.rs  loop.rs  match.rs  match_arrays.rs  match_binding.rs  match_ref.rs  match_tuples.rs  parse_string.rs  primitives.rs  structures.rs  to_string.rs  try_from.rs  tuples.rs  turbo_fish.rs
