[package]
name = "rbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "formatted_print"
path = "src/formatted_print.rs"

[[bin]]
name = "complex_numbers"
path = "src/complex_numbers.rs"

[[bin]]
name = "display_list"
path = "src/display_list.rs"

[[bin]]
name = "formatting_color"
path = "src/formatting_color.rs"

[[bin]]
name = "primitives"
path = "src/primitives.rs"

[dependencies]
