[package]
name = "rbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "formatted_print"
path = "src/formatted_print.rs"

[[bin]]
name = "complex_numbers"
path = "src/complex_numbers.rs"

[[bin]]
name = "display_list"
path = "src/display_list.rs"

[[bin]]
name = "formatting_color"
path = "src/formatting_color.rs"

[[bin]]
name = "primitives"
path = "src/primitives.rs"

[[bin]]
name = "tuples"
path = "src/tuples.rs"

[[bin]]
name = "arrays_and_slices"
path = "src/arrays_and_slices.rs"

[[bin]]
name = "structures"
path = "src/structures.rs"

[[bin]]
name = "enums"
path = "src/enums.rs"

[[bin]]
name = "linkedlist"
path = "src/linkedlist.rs"

[[bin]]
name = "inference"
path = "src/inference.rs"

[[bin]]
name = "aliasing"
path = "src/aliasing.rs"

[[bin]]
name = "from"
path = "src/from.rs"

[dependencies]
