[package]
name = "rbe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "formatted_print"
path = "src/formatted_print.rs"

[[bin]]
name = "complex_numbers"
path = "src/complex_numbers.rs"

[[bin]]
name = "display_list"
path = "src/display_list.rs"

[[bin]]
name = "formatting_color"
path = "src/formatting_color.rs"

[[bin]]
name = "primitives"
path = "src/primitives.rs"

[[bin]]
name = "tuples"
path = "src/tuples.rs"

[[bin]]
name = "arrays_and_slices"
path = "src/arrays_and_slices.rs"

[[bin]]
name = "structures"
path = "src/structures.rs"

[[bin]]
name = "enums"
path = "src/enums.rs"

[[bin]]
name = "linkedlist"
path = "src/linkedlist.rs"

[[bin]]
name = "inference"
path = "src/inference.rs"

[[bin]]
name = "aliasing"
path = "src/aliasing.rs"

[[bin]]
name = "from"
path = "src/from.rs"

[[bin]]
name = "try_from"
path = "src/try_from.rs"

[[bin]]
name = "to_string"
path = "src/to_string.rs"

[[bin]]
name = "parse_string"
path = "src/parse_string.rs"

[[bin]]
name = "turbo_fish"
path = "src/turbo_fish.rs"

[[bin]]
name = "expressions"
path = "src/expressions.rs"

[[bin]]
name = "loop"
path = "src/loop.rs"

[[bin]]
name = "forloop"
path = "src/forloop.rs"

[[bin]]
name = "match"
path = "src/match.rs"

[[bin]]
name = "match_tuples"
path = "src/match_tuples.rs"

[[bin]]
name = "match_arrays"
path = "src/match_arrays.rs"

[[bin]]
name = "match_ref"
path = "src/match_ref.rs"

[[bin]]
name = "match_binding"
path = "src/match_binding.rs"

[[bin]]
name = "if_let"
path = "src/if_let.rs"

[[bin]]
name = "associated_functions"
path = "src/associated_functions.rs"

[[bin]]
name = "closure1"
path = "src/closure1.rs"

[[bin]]
name = "closure2"
path = "src/closure2.rs"

[[bin]]
name = "closure3"
path = "src/closure3.rs"

[[bin]]
name = "closure4"
path = "src/closure4.rs"

[[bin]]
name = "higher_order_functions"
path = "src/higher_order_functions.rs"

[dependencies]
